# strawberry

./: .alexignore  .alexrc  .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  AGENTS.md  BUG_FIX_PROGRESS.md  BUG_FIX_PROGRESS_UPDATED.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION_REMOVALS.md  EXECUTION_ENGINE_COMPARISON.md  FINAL_PERFORMANCE_SUMMARY.md  FINAL_SESSION_PROGRESS.md  FIXES_COMPLETED.md  Factorial.py  GRAPHQL_CORE_OPTIMIZATION_IDEAS.md  IMPLEMENTATION_PLAN_3735.md  JIT_100_PERCENT_SUCCESS.md  JIT_BATTLE_TEST_SUMMARY.md  JIT_BUGS_FOUND.md  JIT_FINAL_BATTLE_TEST_REPORT.md  JIT_IMPLEMENTATION_SUMMARY.md  JIT_OPTIMIZATION_SUMMARY.md  JIT_PERFORMANCE_FINDINGS.md  JIT_REAL_STATUS.md  LICENSE  Makefile  OPTIMIZATION_IDEAS.md  OPTIMIZATION_SUMMARY.md  (+73 more)
.circleci/: config.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  main.workflow  pyproject.toml
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md  other_issues.md
.github/bot-action/: Dockerfile  action.yml  main.py
.github/get-pr-info-action/: Dockerfile  action.yml  main.js  package-lock.json  package.json
.github/read-tweet-action/: Dockerfile  action.yml  main.py  read.py
.github/release-check-action/: Dockerfile  RELEASE.md  action.yml  check.py  comment_templates.py  config.py  github.py  release.py
.github/validate-tweet-action/: Dockerfile  action.yml  main.js  package-lock.json  package.json
.github/workflows/: claude.yml  codeflash.yaml  codeql-analysis.yml  deploy-docs.yml  e2e-federation-tests.yml  e2e-tests.yml  federation-compatibility.yml  inclusive-organisation.yml  inclusive-organization.yml  invite-contributors.yml  issue-manager.yml  mypy.yml  ok-to-preview.yml  pre-commit.yml  pre-release-pr.yml  preview-docs.yml  release-check.yml  release.yml  slash-commands.yml  test-type-checkers.yml  test.yml  zizmor.yml
debug_scripts/: compare_sync_vs_async.py  count_resolver_calls.py  debug_async_detection.py  inspect_jit_code.py  profile_jit_single.py  profile_standard.py  test_jit_perf.py  test_jit_progressive.py  test_jit_simple.py
docs/: README.md  README.mdx  RELEASE.md  _test.md  breaking-changes.md  breaking-changes.mdx  errors.md  extensions.md  faq.md  index.md  schema-basics.md  test.md
docs/01_general/: 01_schema-basics.md  02_queries.md  03_mutations.md  05_why.md  queries.md  schema-basics.md  subscriptions.md
docs/02_types/: directives.md  enums.md  generics.md  input-types.md  interfaces.md  resolvers.md  scalars.md  union.md
docs/03_features/: authentication.md  dataloaders.md  errors.md  extensions.md  file-upload.md  pagination.md  permissions.md  pydantic.md  server.md
docs/04_concepts/: async.md  typings.md
docs/05_integrations/: asgi.md  django.md  flask.md  pydantic.md
docs/06_operations/: deployment.md  testing.md  tracing.md
docs/breaking-changes/: 0.146.0.md  0.146.0.mdx  0.159.0.md  0.159.0.mdx  0.169.0.md  0.179.0.md  0.180.0.md  0.180.0.mdx  0.190.0.md  0.213.0.md  0.213.0.mdx  0.217.0.md  0.217.0.mdx  0.233.0.md  0.233.0.mdx  0.236.0.md  0.240.0.md  0.243.0.md  0.247.0.md  0.248.0.md  0.249.0.md  0.251.0.md  0.268.0.md  0.278.1.md  0.279.0.md  0.283.0.md  0.285.0.md  0.288.0.md  0.313.0.md  0.320.0.md
docs/cli/: locate-definition.md
docs/codegen/: query-codegen.md  schema-codegen.md
docs/concepts/: async.md  typings.md
docs/editors/: mypy.md  vscode.md
docs/errors/: _template.md  conflicting-arguments.md  connection-wrong-annotation.md  connection-wrong-resolver-annotation.md  duplicated-type-name.md  invalid-argument-type.md  invalid-argument-type.mdx  invalid-superclass-interface.md  invalid-type-for-union-merge.md  invalid-type-for-union-merge.mdx  unsupported-type.md  (+19 more)
e2e/: .gitattributes  .gitignore  app.py  app.ts  components.json  graphiql_server.py  index.html  package-lock.json  package.json  playwright.config.ts  relay.config.json  tsconfig.app.json  tsconfig.json  vite.config.ts
e2e-federation-tests/: conftest.py  fixtures.py  test_mutation.py  test_query.py
federation-compatibility/: Dockerfile  docker-compose.yml  schema.py
jit/: compiler.py  hand_test.py  schema.py  test.py  test_from_benchmarks.py
scripts/: base.py  create_github_release.py  has_release.py  ok_to_preview.py  prepare_release.py  publish_changes.py
site/: .editorconfig  .gitignore  .stylelintrc  gatsby-config.js  gatsby-node.js  index.html  package.json  tslint.json
strawberry/: RELEASE.md  __init__.py  __main__.py  a.graphql  annotation.py  arguments.py  auto.py  b.gql  codegen.py  config.py  constants.py  context.py  context_var.py  custom_scalar.py  dataloader.py  datetime_scalar.py  decorator.py  description_source.py  description_sources.py  directive.py  enum.py  exceptions.py  federation.py  field.py  graphql.py  http.py  identifier.py  jit.py  jit_compiler.py  jit_compiler_cached.py  jit_compiler_optimized.py  jit_compiler_optimized_async.py  jit_compiler_parallel.py  lazy_type.py  middleware.py  mutation.py  object_type.py  parent.py  permission.py  permission_directive.py  (+17 more)
strawberry-core-rs/: Cargo.toml  pyproject.toml
strawberry-core-rs/src/: lib.rs
tests/: __init__.py  a.py  b.py  c.py  conftest.py  d.py  example.py  test_aio.py  test_arguments_converter.py  test_auto.py  test_benchmarks.py  test_context.py  test_custom_scalar.py  test_dataloaders.py  test_declaring_types.py  test_decorator.py  test_deprecations.py  test_directives.py  test_enum.py  test_exception_handler.py  test_execute.py  test_field.py  test_forward_references.py  test_generics.py  test_info.py  test_input_types.py  test_inspect.py  test_interface.py  test_jit_error_handling.py  test_jit_error_scenarios.py  test_jit_optimized_async.py  test_permission.py  test_printer.py  test_relay.py  test_repr.py  test_schema.py  test_sentinel.py  test_simple_jit_errors.py  test_strawberry.py  test_subscription.py  (+3 more)
(+1761 files in other folders)
